[package]
name = "sender"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-lite = "1.13.0"
lapin = "2.1.1"
serde = { version = "1.0.162", features = ["derive"] }
tokio = { version = "1.28.0", features = ["rt-multi-thread", "full"] }
library = { path = "../library" }
